--- a/style.css
+++ b/style.css
@@ -1,155 +1,322 @@
-body{
+
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,500;0,800;1,700&display=swap');
+
+:root {
+  --clr-backgroun:#232323;
+  --clr-gradient1:linear-gradient(180deg, #7755FF 0%, #6943FF 0.01%, #2F2CE9 100%);
+  --clr-gradient2: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0) 100%, rgba(37, 33, 201, 0) 100%);
+  --clr-yellow:#FFB21E;
+  --clr-yellow-95-white:linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #FFB21E;
+  --clr-blue:#1125D6;
+  --clr-blu-white:linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #1125D6;
+  --clr-green:#00BB8F;
+  --clr-green-white:linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #00BB8F;
+  --clr-red:#FF5555;
+  --clr-red-white:linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #FF5555;
+  --clr-dark-navy:#303B59;
+  --clr-light-blue:#CAC9FF;
+  --clr-Very-Light-blue:#ECF2FF;
+  --clr-white:#FFFFFF;
+
+  --fs-16: 1rem;
+  --fs-18:1.125rem;
+  --fs-24:1.5rem;
+  --fs-32:2rem;
+  --fs-56:3.5rem;
+  --fs-72: 4.5rem;
+}
+
+*{
   margin: 0;
+  padding: 0;
+  font-family: inherit;
+}
+
+body{
+  background-color: var(--clr-backgroun);
+  font-family: 'Hanken Grotesk', sans-serif;
+  height: 100vh;
+}
+
+
+
+main {
+  width: 23.438rem;
+  height: 50.563rem;
+  background-color: var(--clr-white);
+}
+
+@media (min-width:600px) {
+  body {
+    background: var(--clr-Very-Light-blue);
+  }
+
+  main {
+    display: flex;
+    width: 736px;
+    height: 512px;
+    margin-top: 284px;
+    margin-left: 352px;
+    border-radius: 2rem;
+  }
+}
+
+.your-Result {
+  background: var(--clr-gradient1);
+  width: 23.438rem;
+  height: 22.25rem;
+  border-radius: 0 0 2rem 2rem;
+  box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
+}
+
+@media (min-width:600px) {
+  .your-Result {
+    width: 368px;
+    height: 512px;
+    border-radius: 2rem;
+  }
+}
+
+.your-Result-head {
+  padding: 1.5rem 8.813rem;
+  font-size: var(--fs-18);
+  color: var(--clr-light-blue);
+  font-weight: 700;
+  width:100%;
+
+}
+
+@media (min-width:600px) {
+
+  .your-Result-head {
+    font-size: var(--fs-24);
+    padding: 2.375rem 0 0 7.438rem ;
+  }
+}
+
+.Result-circle {
+  width: 8.75rem;
+  height: 8.75rem;
+  background: var(--clr-gradient2);
+  border-radius: 50%;
+  margin: 1.5rem 7.375rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main{
-  display: grid;
-  grid-template-columns: 350px;
-  justify-content: center;
-  box-shadow: 0 0 20px 10px hsla(252, 100%, 67%,0.1);
-  border-radius: 20px;
-  align-items: center;
+
+@media (min-width:600px) {
+  .Result-circle {
+    width: 12.5rem;
+    height: 12.5rem;
+    margin: 2.188rem auto;
+  }
 }
-h1,p{
-  font-family:'Outfit', sans-serif;
-  font-size: 18px;
+
+.circle-number {
+  width: 3.938rem;
+  height: 5.813rem;
+}
+
+@media (min-width:600px) {
+  .circle-number {
+    width: 5.063rem;
+    height: 6.188rem;
+  }
+}
+
+.circle-number h1 {
+  font-size: var(--fs-56);
+  line-height: 72px;
+  color: var(--clr-white);
+  font-weight: 800;
+}
+
+@media (min-width:600px){
+  .circle-number h1 {
+    font-size: var(--fs-72);
+  }
+}
+
+.Result-circle p {
+  color: var(--clr-light-blue);
+  opacity: 0.52;
+  font-size: var(--fs-16);
+  text-align: center;
+  font-weight: 700;
+}
+
+@media (min-width:600px){
+  .Result-circle p {
+    font-size: var(--fs-18);
+  }
+}
+
+.text {
+  margin: 1.5rem 3.625rem;
+}
+
+.text h1 {
+  color: var(--clr-white);
+  font-size: var(--fs-24);
+  font-weight: 700;
+  text-align: center;
+}
+
+@media (min-width:600px) {
+  .text h1 {
+    font-size: var(--fs-32);
+  }
+}
+
+.text p {
+  color: var(--clr-light-blue);
+  font-size: var(--fs-16);
+  width: 16.25rem;
+  margin-top: 0.5rem;
+  text-indent: 0.6rem;
+  line-height: 1.313rem;
   font-weight: 500;
 }
-.your-Result{
-  background:linear-gradient(hsl(252, 100%, 67%),hsl(241, 81%, 54%));
-  border-radius: 0 0 20px 20px;
-  z-index: 10;
+
+@media (min-width:600px) {
+  .text p {
+    font-size: var(--fs-18);
+    text-indent: 0;
+    text-align: center;
+    line-height: 1.466rem;
+  }
+}
+
+.summary {
+  padding-left: 1.875rem;
+}
+
+.summary h1 {
+  color: var(--clr-dark-navy);
+  padding: 1.5rem .125rem 0 0;
+  font-size: var(--fs-18);
+  font-weight: 700;
+}
+
+@media (min-width:600px) {
+  .summary h1 {
+    font-size: var(--fs-24);
+    padding: 2.375rem 0 0 .625rem;
+  }
+}
+
+.summary div {
+  box-sizing: border-box;
+  width: 19.688rem;
+  height: 3.5rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  padding: 1rem;
+  margin-top: 1rem;
 }
-.your-Result > h1,p{
-  text-align: center;
-  color: hsl(0, 0%, 100%);
-  font-size: 18px;
+
+@media (min-width:600px) {
+  .summary div {
+    width: 18rem;
+  }
+}
+
+.summary div p {
+  padding-left: 0.75rem;
+  font-size: var(--fs-16);
+}
+
+@media (min-width:600px) {
+  .summary div p {
+    font-size: var(--fs-18);
+  }
+}
+
+.summary div span {
+  padding-left: 7.75rem;
+  font-weight: 700;
+  color: var(--clr-dark-navy);
+}
+
+@media (min-width:600px) {
+  .summary div span {
+    padding-left: 5.2rem;
+    font-size: var(--fs-18);
+  }
+}
+
+#hundred {
+  padding-left: .5rem;
+  opacity: 50%;
   
 }
-.Result-circle{
-  display: flex; 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; 
-  line-height: 3px;
-  width: 150px;
-  height: 150px;
-  background: radial-gradient(circle, hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
-  border-radius: 50%;
-  margin-bottom: 30px;
+
+/* Due to the unevenness of the letters, the spans on the right side were not corrected */
+#debiloba {
+  padding-right: .8rem;
 }
-.circle-large{
-  font-size: 54px;
-  color: hsl(0, 0%, 100%);
+.summary div:nth-child(2) {
+  margin-top: 1.5rem;
+  background: var(--clr-red-white);
+  border-radius: .75rem;
+}
+
+@media (min-width:600px) {
+  .summary div:nth-child(2) {
+    margin-top: 1.75rem;
+  }
+}
+
+.summary div:nth-child(3) {
+  background: var(--clr-yellow-95-white);
+  border-radius: .75rem;
+}
+
+.summary div:nth-child(4) {
+  background: var(--clr-green-white);
+  border-radius: .75rem;
+}
+
+.summary div:nth-child(5) {
+  background: var(--clr-blu-white);
+  border-radius: .75rem;
+}
+
+.summary div:nth-child(2) p {
+  color: var(--clr-red);
+}
+
+.summary div:nth-child(3) p {
+  color: var(--clr-yellow);
+}
+
+.summary div:nth-child(4) p {
+  color: var(--clr-green);
+}
+
+.summary div:nth-child(5) p {
+  color: var(--clr-blue);
+}
+
+button {
+  width: 19.688rem;
+  height: 3.5rem;
+  margin-top: 1.5rem;
+  background: var(--clr-dark-navy);
+  border-radius: 8rem;
+  color: var(--clr-white);
+  font-size: var(--fs-18);
   font-weight: 700;
 }
 
-.your-Result span{
-  font-size: 34px;
-  font-weight: 800;
-}
-
-.summary-reaction,.summary-memory,
-.summary-verbal,.summary-visual{
-  border-radius: 10px;
-  height: 50px;
-  display: flex;
-  justify-content:space-between;
-  align-items: center; 
-  margin-top: 10px;
-  padding: 0 20px;
-  font-family: 500;
-  font-size: 10px;
-}
-
-.summary{
-  background: hsl(0, 0%, 100%);
-  margin: -20px 0px;
-  padding:20px;
-}
-.h1-summary{
-  font-weight: 700;
-  
-}
-
-.summary-reaction{
-  background-color:hsla(0, 100%, 67%, .07);
-  
-}
-.summary-reaction > p {
-  color: hsl(0, 100%, 67%);
-
-}
-.summary-memory{
-  background-color: hsla(39, 100%, 56%, .07);
-}
-.summary-memory p{ 
-  color: hsl(39, 100%, 56%); 
-}
-.summary-verbal{
-  background-color: hsla(166, 100%, 37%, .07);
- 
-}
-.summary-verbal p{
-  color: hsl(166, 100%, 37%);
-}
-.summary-visual{
-  background-color: hsla(234, 85%, 45%, .07);
-   
-}
-.summary-visual p{
-  color: hsl(234, 85%, 45%); 
-}
-.summary span{
-  font-size: 18px;
-  font-weight: 800;
-}
-img{
-  margin-right: 10px;
-}
-button{
-  background-color: hsl(224, 30%, 27%);
-  height: 60px;
-  width: 100%;
-  border-radius: 40px;
-  margin-top:30px ;
-  color:hsl(0, 0%, 100%);
-  font-size: 18px;
-}
-
-button:hover,button:active{
-  background-color:hsl(234, 85%, 45%);
-}
-
-@media (min-width: 800px){
-  body{
-    height: 100vh;
-    display: grid;
-    place-items: center;
-    justify-content: center;
+@media (min-width:600px) {
+  button {
+    margin-top: 2.563rem;
+    width: 18rem;
   }
-  main{
-    grid-template-columns: 1fr 1fr;
-    
-  }
+}
 
-  .summary{
-    border-radius: 0 20px 20px 0;
-    margin-left: -20px;
-    padding-left: 40px;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  
-  .your-Result{
-    border-radius: 20px;
-    padding: 20px;
-  }
-} 
+button:active {
+  background: var(--clr-gradient1);
+}
